--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,7 +2,7 @@ name: Latest blog post workflow
 on:
   schedule:
     # Runs every hour
-    - cron: '*/5 * * * *'
+    - cron: '0 */12 * * *'
   workflow_dispatch:
 
 jobs:
