--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LOC_CHART: False
+          SHOW_PROJECTS: False
+          SHOW_TIMEZONE: False
+          SHOW_OS: False
