--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,3 +18,5 @@ jobs:
           SHOW_PROJECTS: False
           SHOW_TIMEZONE: False
           SHOW_OS: False
+          SHOW_SHORT_INFO: False
+          SHOW_PROFILE_VIEWS: False
