--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,5 +18,5 @@ jobs:
           SHOW_PROJECTS: False
           SHOW_TIMEZONE: False
           SHOW_OS: False
-          SHOW_SHORT_INFO: False
+          SHOW_LANGUAGE_PER_REPO: False
           SHOW_PROFILE_VIEWS: False
