--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,22 +1,22 @@
-name: Waka Readme
+# name: Waka Readme
 
-on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
-  workflow_dispatch:
-jobs:
-  update-readme:
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
-    steps:
-      - uses: anmol098/waka-readme-stats@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LOC_CHART: False
-          SHOW_PROJECTS: False
-          SHOW_TIMEZONE: False
-          SHOW_OS: False
-          SHOW_LANGUAGE_PER_REPO: False
-          SHOW_PROFILE_VIEWS: False
+# on:
+#   schedule:
+#     # Runs at 12am IST
+#     - cron: '30 18 * * *'
+#   workflow_dispatch:
+# jobs:
+#   update-readme:
+#     name: Update Readme with Metrics
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: anmol098/waka-readme-stats@master
+#         with:
+#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+#           SHOW_LOC_CHART: False
+#           SHOW_PROJECTS: False
+#           SHOW_TIMEZONE: False
+#           SHOW_OS: False
+#           SHOW_LANGUAGE_PER_REPO: False
+#           SHOW_PROFILE_VIEWS: False
